--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
           align-items: center;
   height: auto;
   min-height: 100%;
-  width: 1200px;
+  width: 600px;
   max-width: 100%;
   margin: 0 auto;
   padding: 20px 20px 50px 20px;
@@ -126,7 +126,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   height: 100%;
-  min-width: 100%;
+  max-width: 400px;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
