--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,7 +22,7 @@ body {
 	align-items: center;
 	height: auto;
 	min-height: 100%;
-	width: 1200px;
+	width: 600px;
 	max-width: 100%;
 	margin: 0 auto;
 	padding: 20px 20px 50px 20px;
@@ -88,7 +88,7 @@ body {
 	&__label {
 		display: flex;
 		height: 100%;
-		min-width: 100%;
+		max-width: 400px;
 		justify-content: end;
 		align-items: center;
 		grid-column: 1/5;
