--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
-:export {
-  bgColor: hsl(222deg, 26%, 31%);
-  textOneColor: hsl(0deg, 0%, 100%);
-  bgToggleContainer: hsl(223deg, 31%, 20%);
-  toggleBtn: hsl(6deg, 63%, 50%);
-  labelColor: hsl(224deg, 36%, 15%);
-  delResetShadowColor: hsl(224deg, 28%, 35%);
-  delResetBgColor: hsl(225deg, 21%, 49%);
-  textTwoColor: hsl(221deg, 14%, 31%);
-  bgOption: hsl(30deg, 25%, 89%);
-  shadowOption: hsl(28deg, 16%, 65%);
-  bgEqualBtn: hsl(6deg, 63%, 50%);
-  shadowBgEqualBtn: hsl(6deg, 70%, 34%);
-  test: rgb(151, 235, 26);
+
+
+:root {
+	--bg-color: hsl(222, 26%, 31%);
+	--text-one-color: hsl(0, 0%, 100%);
+	--bg-toggle-container: hsl(223, 31%, 20%);
+	--toggle-btn: hsl(6, 63%, 50%);
+	--label-color: hsl(224, 36%, 15%);
+	--del-reset-shadow-color: hsl(224, 28%, 35%);
+	--del-reset-bg-color: hsl(225, 21%, 49%);
+	--text-two-color: hsl(221, 14%, 31%);
+	--bg-option: hsl(30, 25%, 89%);
+	--shadow-option: hsl(28, 16%, 65%);
+	--bg-equal-btn: hsl(6, 63%, 50%);
+	--shadow-bg-equal-btn: hsl(6, 70%, 34%);
 }
 
 *,
@@ -31,7 +32,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   font-family: "League Spartan", sans-serif;
-  background-color: hsl(222deg, 26%, 31%);
+  background-color: var(--bg-color);
 }
 
 .wrapper {
@@ -60,7 +61,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: hsl(0deg, 0%, 100%);
+  color: var(--text-one-color);
 }
 .calc__title {
   margin: 0 0 10px 0px;
@@ -98,7 +99,7 @@ body {
   justify-items: end;
   height: 30px;
   width: 80px;
-  background-color: hsl(223deg, 31%, 20%);
+  background-color: var(--bg-toggle-container);
   margin: 10px 0 25px;
   padding: 2px;
   border-radius: 20px;
@@ -111,7 +112,7 @@ body {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  background-color: hsl(6deg, 63%, 50%);
+  background-color: var(--toggle-btn);
   border-radius: 50%;
   opacity: 0;
 }
@@ -134,7 +135,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   grid-column: 1/5;
-  background-color: hsl(224deg, 36%, 15%);
+  background-color: var(--label-color);
   padding: 10px 19px;
   border-radius: 10px;
   -webkit-box-flex: 0;
@@ -160,7 +161,7 @@ body {
   height: 100%;
   width: 100%;
   gap: 2px 0;
-  background-color: hsl(223deg, 31%, 20%);
+  background-color: var(--bg-toggle-container);
   margin-top: 60px;
   border-radius: 10px;
   padding: 15px 15px;
@@ -171,20 +172,20 @@ body {
   padding: 10px 0;
   border-radius: 5px;
   border: none;
-  background: hsl(30deg, 25%, 89%);
-  color: hsl(221deg, 14%, 31%);
+  background: var(--bg-option);
+  color: var(--text-two-color);
   font-size: 30px;
   font-family: "League Spartan", sans-serif;
-  -webkit-box-shadow: 0px 4px 0px 0px hsl(28deg, 16%, 65%);
-          box-shadow: 0px 4px 0px 0px hsl(28deg, 16%, 65%);
+  -webkit-box-shadow: 0px 4px 0px 0px var(--shadow-option);
+          box-shadow: 0px 4px 0px 0px var(--shadow-option);
 }
 .calc__option--del {
   text-transform: uppercase;
   font-size: 20px;
-  color: hsl(0deg, 0%, 100%);
-  background-color: hsl(225deg, 21%, 49%);
-  -webkit-box-shadow: 0px 4px 0px 0px hsl(224deg, 28%, 35%);
-          box-shadow: 0px 4px 0px 0px hsl(224deg, 28%, 35%);
+  color: var(--text-one-color);
+  background-color: var(--del-reset-bg-color);
+  -webkit-box-shadow: 0px 4px 0px 0px var(--del-reset-shadow-color);
+          box-shadow: 0px 4px 0px 0px var(--del-reset-shadow-color);
 }
 .calc__btn {
   height: 80%;
@@ -197,16 +198,16 @@ body {
 .calc__reset-btn {
   grid-column: 1/3;
   font-size: 20px;
-  color: hsl(0deg, 0%, 100%);
-  background-color: hsl(225deg, 21%, 49%);
-  -webkit-box-shadow: 0px 4px 0px 0px hsl(224deg, 28%, 35%);
-          box-shadow: 0px 4px 0px 0px hsl(224deg, 28%, 35%);
+  color: var(--text-one-color);
+  background-color: var(--del-reset-bg-color);
+  -webkit-box-shadow: 0px 4px 0px 0px var(--del-reset-shadow-color);
+          box-shadow: 0px 4px 0px 0px var(--del-reset-shadow-color);
 }
 .calc__equal-btn {
   grid-column: 3/5;
   font-size: 20px;
-  color: hsl(0deg, 0%, 100%);
-  background-color: hsl(6deg, 63%, 50%);
-  -webkit-box-shadow: 0px 4px 0px 0px hsl(6deg, 70%, 34%);
-          box-shadow: 0px 4px 0px 0px hsl(6deg, 70%, 34%);
+  color: var(--text-one-color);
+  background-color: var(--bg-equal-btn);
+  -webkit-box-shadow: 0px 4px 0px 0px var(--shadow-bg-equal-btn);
+          box-shadow: 0px 4px 0px 0px var(--shadow-bg-equal-btn);
 }/*# sourceMappingURL=style.css.map */
